[metadata]
name = gmprocess
version = 1.2.0
description = USGS Automated Ground Motion Processing Software
author = Eric Thompson, Mike Hearne, Brad Aagaard, Bruce Worden, Heather Schovanec, John Rekoske
author_email = emthompson@usgs.gov
license = CC0 1.0
url = https://github.com/usgs/groundmotion-processing

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = 
    setuptools_scm
python_requires = >=3.8
install_requires =
    esi-utils-colors>1.0
    esi-utils-io>1.0
    esi-utils-rupture>1.0
    dask>=2021.8
    h5py>=2.8
    lxml>=4.6.1
    matplotlib>=3.1.0
    numpy>=1.21
    obspy>=1.3.0
    openpyxl>=3.0.8
    pandas>=1.0
    ps2ff>=1.5.2
    pyasdf>=0.7
    pytest>=6.2
    pytest-cov>=2.12
    pytest-console-scripts>=1.2
    requests>=2.23
    ruamel.yaml>=0.17.16
    schema>=0.7
    scipy>=1.7
    setuptools-scm>=6.3.2
    statsmodels>=0.12.2

[options.extras_require]
test = 
    pytest>=6.2
dev = 
    black>=21
    flake8>=3.9
    ipython>=7.26
    cython>=0.29.23

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gmconvert = gmprocess.bin.gmconvert:main
    gminfo = gmprocess.bin.gminfo:main
    gmrecords = gmprocess.bin.gmrecords:main
    gmworkspace = gmprocess.bin.gmworkspace:main
    list_metrics = gmprocess.bin.list_metrics:main
    cwb_gather = gmprocess.bin.cwb_gather:main
